tests/ui/typeck/path-to-method-sugg-unresolved-expr.rs
fn main() {
    let page_size = page_size::get();
    //~^ ERROR failed to resolve: use of unresolved module or unlinked crate `page_size`
}
